nullaway_error_9E12AD80-6DAC-4D1A-8C56-D71DA59143B4.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webmvc/src/main/java/org/springframework/web/servlet/HandlerExecutionChain.java:82: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.handler = handler;
			             ^
    (see http://t.uber.com/nullaway )
